feat: add delete endpoint and query for list
